# minish

./: CMakeLists.txt  README.md  demo.cast  local.sh
include/: builtin.hpp  command_substitute.hpp  completion.hpp  exec_pipes.hpp  shell.hpp  shell_exec.hpp  shell_utils.hpp  tokenizer.hpp  var_expension.hpp
src/: builtin.cpp  command_substitute.cpp  completion.cpp  exec_pipes.cpp  main.cpp  shell.cpp  shell_exec.cpp  shell_utils.cpp  tokenizer.cpp  var_expension.cpp
